--- a/navBar.html
+++ b/navBar.html
@@ -19,7 +19,7 @@
 
         <!-- Barra de búsqueda -->
         <div>
-            <input type="text" name="" id="" placeholder="realiza tu búsqueda">
+            <input type="search" name="" id="" placeholder="realiza tu búsqueda">
         </div>
 
         <!-- Imagen de carrito de compra -->
