La pagina sobre nosotros hecha

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+  <div id="div_body"> 
+
   <header>
     <div>
       <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='inicio.html'"
@@ -97,6 +99,8 @@
       crossorigin="anonymous"></script>
     <!-- Aqui iria texto -->
   </main>
+</div>
+
   <footer>
     <p>Footer text</p> <!-- footer -->
   </footer>
