--- a/historia.html
+++ b/historia.html
@@ -83,7 +83,7 @@
   </div>
   <footer>
     <div>
-      <h5>&COPY; Todos los derechos reservados a PcAczezorioz - 2022</h5> <!-- footer -->
+      <h5>&COPY; Todos los derechos reservados a PcAczezorios - 2022</h5>
     </div>
   </footer>
   <script src="js/login.js"></script>
