--- a/historia.html
+++ b/historia.html
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-  <div id="div_body">
+
     <header>
       <div>
-        <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='inicio.html'"
+        <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='index.html'"
           alt="PcAczezorios" title="PcAczezorios">
         <nav>
           <ul>
             <li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
-            <li><a href="tipos.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
+            <li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
             <li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
           </ul>
         </nav>
@@ -80,7 +80,7 @@
           mejorar la actual), además de desarrollar su correspodiente aplicación para dispositivos móviles.</p>
       </div>
     </main>
-  </div>
+
   <footer>
     <div>
       <h5>&COPY; Todos los derechos reservados a PcAczezorios - 2022</h5>
