--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/carrusel.css">
   <link rel="stylesheet" href="css/navBar-login.css">
+  <link rel="stylesheet" href="css/galeria.css">
   <link rel="stylesheet" href="css/style.css">
   <title>PcAczezorios</title>
 </head>
 
 <body>
-  <div id="div_body"> 
-
   <header>
     <div>
-      <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='inicio.html'"
+      <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='index.html'"
         alt="PcAczezorios" title="PcAczezorios">
       <nav>
         <ul>
-          <li><a href="inicio.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
-          <li><a href="tipos.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
+          <li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
+          <li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
           <li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
         </ul>
       </nav>
@@ -63,32 +62,81 @@
     </div>
   </header>
   <main>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="img/logo-violeta.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/logo-violeta.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/logo-violeta.png" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <i class="bi bi-caret-left-fill"></i>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <i class="bi bi-caret-right-fill"></i>
-      </a>
-    </div>
+    <section id="productos-destacados">
+		<h2>Productos destacados</h2>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  </ol>
+		  <div class="carousel-inner">
+			<div class="carousel-item active">
+			  <img class="d-block w-100" src="img/logo-violeta.png" alt="First slide">
+			</div>
+			<div class="carousel-item">
+			  <img class="d-block w-100" src="img/logo-violeta.png" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+			  <img class="d-block w-100" src="img/logo-violeta.png" alt="Third slide">
+			</div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<i class="bi bi-caret-left-fill"></i>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<i class="bi bi-caret-right-fill"></i>
+		  </a>
+		</div>
+	</section>
+	<section id="productos">
+		<h2>Nuestro catálogo</h2>
+		<div class="galeria-productos">
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
+					<div class="nombre-producto"><span>Producto</span></div>
+					<div class="precio-producto"><span>100 €</span></div>
+				</a>
+			</article>
+		</div>
+	</section>
 </main>
-</div>
 
 <footer>
 	<div>
