--- a/index.html
+++ b/index.html
@@ -72,13 +72,19 @@
 		  </ol>
 		  <div class="carousel-inner">
 			<div class="carousel-item active">
-			  <img class="d-block w-100" src="img/logo-violeta.png" alt="First slide">
+			  	<a href="">
+				  <img class="d-block w-100" src="img/productos/MSI-3090.jpg" alt="Gráfica 3090">
+				</a>
 			</div>
 			<div class="carousel-item">
-			  <img class="d-block w-100" src="img/logo-violeta.png" alt="Second slide">
+			  	<a href="">
+				  <img class="d-block w-100" src="img/productos/AMD-Ryzen-5900X.jpg" alt="Second slide">
+				</a>
 			</div>
 			<div class="carousel-item">
-			  <img class="d-block w-100" src="img/logo-violeta.png" alt="Third slide">
+			  	<a href="">
+				  <img class="d-block w-100" src="img/productos/PS5.webp" alt="Third slide">
+				</a>
 			</div>
 		  </div>
 		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -93,45 +99,59 @@
 		<h2>Nuestro catálogo</h2>
 		<div class="galeria-productos">
 			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+				<a href="" title="Os queremos 3090">
+					<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090"></img></div>
+					<div class="nombre-producto"><span>MSI GeForce RTX 3090 Ventus 3X</span></div>
+					<div class="precio-producto"><span>3000,90 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+					<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero"></img></div>
+					<div class="nombre-producto"><span>Asus ROG CROSSHAIR VIII DARK HERO</span></div>
+					<div class="precio-producto"><span>249,95 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+					<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X"></img></div>
+					<div class="nombre-producto"><span>AMD Ryzen 9 5900X</span></div>
+					<div class="precio-producto"><span>299,01 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+					<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2"></img></div>
+					<div class="nombre-producto"><span>Corsair K70 MK2 Cherry MX Blue</span></div>
+					<div class="precio-producto"><span>70,00 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+					<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB"></img></div>
+					<div class="nombre-producto"><span>Crucial DDR4 2400 16 GB</span></div>
+					<div class="precio-producto"><span>140,84 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/logo-violeta.png" alt=""></img></div>
-					<div class="nombre-producto"><span>Producto</span></div>
-					<div class="precio-producto"><span>100 €</span></div>
+					<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga"></img></div>
+					<div class="nombre-producto"><span>Astro A50 + Estación carga</span></div>
+					<div class="precio-producto"><span>550,50 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5"></img></div>
+					<div class="nombre-producto"><span>PlayStation 5</span></div>
+					<div class="precio-producto"><span>200,05 €</span></div>
+				</a>
+			</article>
+			<article>
+				<a href="">
+					<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper"></img></div>
+					<div class="nombre-producto"><span>Razer Viper</span></div>
+					<div class="precio-producto"><span>69,99 €</span></div>
 				</a>
 			</article>
 		</div>
