--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/carrusel.css">
   <link rel="stylesheet" href="css/navBar-login.css">
-  <link rel="stylesheet" href="css/historia.css">
+  <link rel="stylesheet" href="css/contacto.css">
 </head>
 
 <body>
@@ -62,22 +62,11 @@
         </div>
       </div>
     </header>
-    <main id="sobre-nosotros">
-      <h1>Sobre nosotros</h1>
-
-      <div class="texto">
-        <p>¡Hola! Nosotros somos PcAczezorios, una pequeña empresa creada en 2011 dedicada al marketing online, y que
-          hoy
-          en
-          día tiene un gran renombre entre los amantes de los ordenadores, gracias principalmente a nuestras funciones
-          de
-          comparador y tienda online de hardware y software para ordenadores. </p>
-        <p> Con sede central en Andorra, nuestra empresa aspira a incorporarse más aún al mercado tecnológico mediante
-          diversos proyectos. Entre estos proyectos de futuro se encuentran abrir tiendas fisicas de PcAczezorios por
-          toda
-          España (pero sin tributar allí) y crear una amplia tienda online de componentes para ordenadores (más bien,
-          mejorar la actual), además de desarrollar su correspodiente aplicación para dispositivos móviles.</p>
-      </div>
+    <main id="contacto">
+	<h1>Contacto</h1>
+	<div class="texto">
+		<p>En proceso...</p>
+	</div>
     </main>
 
   <footer>
