Solucionar errores de validacion
* Solucionar errores simples de validación
* Aun quedan más por solucionar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div>
-      <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='index.html'"
+      <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'"
         alt="PcAczezorios" title="PcAczezorios">
       <nav>
         <ul>
@@ -32,7 +32,6 @@
     </div>
     <!-- Login -->
     <div id="div_login">
-      <img src="" alt="">
       <button><i class="bi bi-person-circle"></i><span>Inicio de sesión</span></button>
 
       <!-- Barra oculta de Login -->
@@ -45,11 +44,11 @@
             </div>
             <div>
               <label for="login_nick" class="labels">Usuario:</label>
-              <input type="text" name="">
+              <input type="text" name="login_nick">
             </div>
             <div>
               <label for="login_password" class="labels">Contraseña:</label>
-              <input type="password">
+              <input type="password" name="login_password">
             </div>
             <div>
               <input type="submit" value="Acceder">
@@ -100,56 +99,56 @@
 		<div class="galeria-productos">
 			<article>
 				<a href="" title="Os queremos 3090">
-					<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090"></img></div>
+					<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090"></div>
 					<div class="nombre-producto"><span>MSI GeForce RTX 3090 Ventus 3X</span></div>
 					<div class="precio-producto"><span>3000,90 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero"></img></div>
+					<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero"></div>
 					<div class="nombre-producto"><span>Asus ROG CROSSHAIR VIII DARK HERO</span></div>
 					<div class="precio-producto"><span>249,95 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X"></img></div>
+					<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X"></div>
 					<div class="nombre-producto"><span>AMD Ryzen 9 5900X</span></div>
 					<div class="precio-producto"><span>299,01 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2"></img></div>
+					<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2"></div>
 					<div class="nombre-producto"><span>Corsair K70 MK2 Cherry MX Blue</span></div>
 					<div class="precio-producto"><span>70,00 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB"></img></div>
+					<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB"></div>
 					<div class="nombre-producto"><span>Crucial DDR4 2400 16 GB</span></div>
 					<div class="precio-producto"><span>140,84 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga"></img></div>
+					<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga"></div>
 					<div class="nombre-producto"><span>Astro A50 + Estación carga</span></div>
 					<div class="precio-producto"><span>550,50 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5"></img></div>
+					<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5"></div>
 					<div class="nombre-producto"><span>PlayStation 5</span></div>
 					<div class="precio-producto"><span>200,05 €</span></div>
 				</a>
 			</article>
 			<article>
 				<a href="">
-					<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper"></img></div>
+					<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper"></div>
 					<div class="nombre-producto"><span>Razer Viper</span></div>
 					<div class="precio-producto"><span>69,99 €</span></div>
 				</a>
