Solucionar errores de validacion [2]
* Solucionar errores simples de validación
* Aun quedan más por solucionar

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
 
     <header>
       <div>
-        <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='index.html'"
+        <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'"
           alt="PcAczezorios" title="PcAczezorios">
         <nav>
           <ul>
@@ -34,7 +34,6 @@
       </div>
       <!-- Login -->
       <div id="div_login">
-        <img src="" alt="">
         <button><i class="bi bi-person-circle"></i><span>Inicio de sesión</span></button>
 
         <!-- Barra oculta de Login -->
@@ -47,11 +46,11 @@
               </div>
               <div>
                 <label for="login_nick" class="labels">Usuario:</label>
-                <input type="text" name="">
+                <input type="text" name="login_nick">
               </div>
               <div>
                 <label for="login_password" class="labels">Contraseña:</label>
-                <input type="password">
+                <input type="password" name="login_password">
               </div>
               <div>
                 <input type="submit" value="Acceder">
@@ -115,7 +114,7 @@
                           </div>
                           <div>
                               <label>Otros </label>
-                              <input type="checkbox" name="Aficiones" value="Cine"/></td>
+                              <input type="checkbox" name="Aficiones" value="Cine"/>
                           </div>
                       </td>
                   </tr>
