Solucionar errores de validacion [3] * Solucionados muchos errores de validacion * Ya quedan solo unos pocos

--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
       <div class="texto">
         <form>
           <fieldset>
-              <table class="tabla-contacto" border="0" CELLPADDING="5">
+              <table class="tabla-contacto">
                   <tr>
                       <td>
                           <label>Nombre:  </label>
