--- a/historia.html
+++ b/historia.html
@@ -20,7 +20,7 @@
 
     <header>
       <div>
-        <img src="img/logo-violeta.png" width="138px" height="48px" onclick="location.href='index.html'"
+        <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'"
           alt="PcAczezorios" title="PcAczezorios">
         <nav>
           <ul>
@@ -33,7 +33,6 @@
       </div>
       <!-- Login -->
       <div id="div_login">
-        <img src="" alt="">
         <button><i class="bi bi-person-circle"></i><span>Inicio de sesión</span></button>
 
         <!-- Barra oculta de Login -->
@@ -46,11 +45,11 @@
               </div>
               <div>
                 <label for="login_nick" class="labels">Usuario:</label>
-                <input type="text" name="">
+                <input type="text" name="login_nick">
               </div>
               <div>
                 <label for="login_password" class="labels">Contraseña:</label>
-                <input type="password">
+                <input type="password" name="login_password">
               </div>
               <div>
                 <input type="submit" value="Acceder">
