--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,8 @@
       </div>
     </header>
     <main id="contacto">
-      <h1>Contacto</h1>
+      <h1><img id="logo" src="img/logo-violeta-ventana.png" alt="logotipo">
+        Contacto</h1>
 
       <div class="texto">
         <form>
