modificado el logo de la pagina de sobre nosotros

--- a/historia.html
+++ b/historia.html
@@ -62,7 +62,10 @@
       </div>
     </header>
     <main id="sobre-nosotros">
-      <h1>Sobre nosotros</h1>
+      <div>
+        <img id="logo" src="img/logo-violeta-ventana.png" alt="">
+        <h1>Sobre nosotros</h1>
+      </div>
 
       <div class="texto">
         <p>¡Hola! Nosotros somos PcAczezorios, una pequeña empresa creada en 2011 dedicada al marketing online, y que
