--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 		  <div class="carousel-inner">
 			<div class="carousel-item active">
 			  	<a href="">
-				  <img class="d-block w-100" src="img/productos/MSI-3090.jpg" alt="Gráfica 3090">
+				  <img class="d-block w-100" id="msi" src="img/productos/MSI-3090.jpg" alt="Gráfica 3090">
 				</a>
 			</div>
 			<div class="carousel-item">
 			  	<a href="">
-				  <img class="d-block w-100" src="img/productos/AMD-Ryzen-5900X.jpg" alt="Second slide">
+				  <img class="d-block w-100" id="amd" src="img/productos/AMD-Ryzen-5900X.jpg" alt="Second slide">
 				</a>
 			</div>
 			<div class="carousel-item">
 			  	<a href="">
-				  <img class="d-block w-100" src="img/productos/PS5.webp" alt="Third slide">
+				  <img class="d-block w-100" id="ps5" src="img/productos/PS5.webp" alt="Third slide">
 				</a>
 			</div>
 		  </div>
