Añadir script del carrito e implementacion "basica"
* Todavia queda por hacer mas visual la parte del carrito en si

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="css/navBar-login.css">
   <link rel="stylesheet" href="css/galeria.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/carrito.css">
+  <script src="js/carrito.js"></script>
   <title>PcAczezorios</title>
 </head>
 
@@ -97,63 +99,88 @@
 	<section id="productos">
 		<h2>Nuestro catálogo</h2>
 		<div class="galeria-productos">
-			<article>
-				<a href="" title="Os queremos 3090">
-					<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090"></div>
-					<div class="nombre-producto"><span>MSI GeForce RTX 3090 Ventus 3X</span></div>
-					<div class="precio-producto"><span>3000,90 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090" class="imagen-articulo"></div>
+				<span class="nombre-producto">MSI GeForce RTX 3090 Ventus 3X</span>
+				<div class="precio-producto">
+					<span>3000,90 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero"></div>
-					<div class="nombre-producto"><span>Asus ROG CROSSHAIR VIII DARK HERO</span></div>
-					<div class="precio-producto"><span>249,95 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero" class="imagen-articulo"></div>
+				<span class="nombre-producto">Asus ROG CROSSHAIR VIII DARK HERO</span>
+				<div class="precio-producto">
+					<span>249,95 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X"></div>
-					<div class="nombre-producto"><span>AMD Ryzen 9 5900X</span></div>
-					<div class="precio-producto"><span>299,01 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X" class="imagen-articulo"></div>
+				<span class="nombre-producto">AMD Ryzen 9 5900X</span>
+				<div class="precio-producto">
+					<span>299,01 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2"></div>
-					<div class="nombre-producto"><span>Corsair K70 MK2 Cherry MX Blue</span></div>
-					<div class="precio-producto"><span>70,00 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2" class="imagen-articulo"></div>
+				<span class="nombre-producto">Corsair K70 MK2 Cherry MX Blue</span>
+				<div class="precio-producto">
+					<span>70,00 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB"></div>
-					<div class="nombre-producto"><span>Crucial DDR4 2400 16 GB</span></div>
-					<div class="precio-producto"><span>140,84 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB" class="imagen-articulo"></div>
+				<span class="nombre-producto">Crucial DDR4 2400 16 GB</span>
+				<div class="precio-producto">
+					<span>140,84 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga"></div>
-					<div class="nombre-producto"><span>Astro A50 + Estación carga</span></div>
-					<div class="precio-producto"><span>550,50 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga" class="imagen-articulo"></div>
+				<span class="nombre-producto">Astro A50 + Estación carga</span>
+				<div class="precio-producto">
+					<span>550,50 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5"></div>
-					<div class="nombre-producto"><span>PlayStation 5</span></div>
-					<div class="precio-producto"><span>200,05 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5" class="imagen-articulo"></div>
+				<span class="nombre-producto">PlayStation 5</span>
+				<div class="precio-producto">
+					<span>200,05 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
-			<article>
-				<a href="">
-					<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper"></div>
-					<div class="nombre-producto"><span>Razer Viper</span></div>
-					<div class="precio-producto"><span>69,99 €</span></div>
-				</a>
+			<article class="articulo-tienda">
+				<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper" class="imagen-articulo"></div>
+				<span class="nombre-producto">Razer Viper</span>
+				<div class="precio-producto">
+					<span>69,99 €</span>
+					<button class="añadir-carrito">Añadir al carrito</button>
+				</div>
 			</article>
 		</div>
+	</section>
+	<section class="carrito">
+		<div>
+			<p>Elementos del carrito</p>
+		</div>
+		<div class="producto">
+			<span>ITEM</span>
+			<span>PRICE</span>
+			<span>QUANTITY</span>
+		</div>
+		<div class="objetos-carrito">
+		</div>
+		<div>
+			<span>Total: </span>
+			<span class="precio-total">0€</span>
+		</div>
+			<button class="comprar">Comprar</button>
 	</section>
 </main>
 
