--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@
 			<span>QUANTITY</span>
 		</div>
 		<div class="objetos-carrito">
+			<!-- Se rellena con JS -->
 		</div>
 		<div>
 			<span>Total: </span>
-			<span class="precio-total">0€</span>
+			<span class="precio-total">0,00 €</span>
 		</div>
 			<button class="comprar">Comprar</button>
 	</section>
