--- a/contacto.html
+++ b/contacto.html
@@ -153,10 +153,10 @@
   
                   <tr>
                       <td>
-                          <input type="reset" value="Resetear" name="Resetear"/>
+                          <input type="reset" value="Resetear" name="Resetear" class="boton-terciario"/>
                       </td>
                       <td>
-                          <button type="submit" value="Enviar" onclick="alert('Formulario enviado correctamente! Espere nuestro mensaje');">Enviar</button>
+                          <button type="submit" value="Enviar" class="boton-primario" onclick="alert('Formulario enviado correctamente! Espere nuestro mensaje');">Enviar</button>
                       </td>
                   </tr>
               </table>
