--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<span class="nombre-producto">MSI GeForce RTX 3090 Ventus 3X</span>
 				<div class="precio-producto">
 					<span>3000,90 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -112,7 +112,7 @@
 				<span class="nombre-producto">Asus ROG CROSSHAIR VIII DARK HERO</span>
 				<div class="precio-producto">
 					<span>249,95 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -120,7 +120,7 @@
 				<span class="nombre-producto">AMD Ryzen 9 5900X</span>
 				<div class="precio-producto">
 					<span>299,01 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -128,7 +128,7 @@
 				<span class="nombre-producto">Corsair K70 MK2 Cherry MX Blue</span>
 				<div class="precio-producto">
 					<span>70,00 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -136,7 +136,7 @@
 				<span class="nombre-producto">Crucial DDR4 2400 16 GB</span>
 				<div class="precio-producto">
 					<span>140,84 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -144,7 +144,7 @@
 				<span class="nombre-producto">Astro A50 + Estación carga</span>
 				<div class="precio-producto">
 					<span>550,50 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -152,7 +152,7 @@
 				<span class="nombre-producto">PlayStation 5</span>
 				<div class="precio-producto">
 					<span>200,05 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 			<article class="articulo-tienda">
@@ -160,14 +160,14 @@
 				<span class="nombre-producto">Razer Viper</span>
 				<div class="precio-producto">
 					<span>69,99 €</span>
-					<button class="añadir-carrito">Añadir al carrito</button>
+					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
 				</div>
 			</article>
 		</div>
 	</section>
 	<section class="carrito">
 		<div>
-			<p>Elementos del carrito</p>
+			<h3>Elementos del carrito</h3>
 		</div>
 		<div class="producto">
 			<span>ITEM</span>
@@ -181,7 +181,7 @@
 			<span>Total: </span>
 			<span class="precio-total">0,00 €</span>
 		</div>
-			<button class="comprar">Comprar</button>
+			<button class="comprar boton-primario">Comprar</button>
 	</section>
 </main>
 
