Carrito con tabla

--- a/index.html
+++ b/index.html
@@ -166,16 +166,15 @@
 		</div>
 	</section>
 	<section id="carrito">
-		<h3>Elementos del carrito</h3>
+		<h3>Carrito</h3>
 		<table>
 			<thead>
 				<tr>
-					<th>CANTIDAD</th>
-					<th>IMAGEN</th>
-					<th>NOMBRE</th>
-					<th>PRECIO/UD</th>
-					<th>PRECIO</th>
-					<th></th>
+					<th>Cantidad</th>
+					<th colspan="2">Producto</th>
+					<th>Precio / Unidad</th>
+					<th>Precio</th>
+					<th>Borrar</th>
 				</tr>
 			</thead>
 			<tbody class="objetos-carrito">
@@ -184,7 +183,7 @@
 			<tfoot>
 				<tr>
 					<th>Total: </th>
-					<td class="precio-total">0, 00€</td>
+					<td class="precio-total" colspan="5">0, 00€</td>
 				</tr>
 			</tfoot>
 		</table>
