--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</article>
 		</div>
 	</section>
-	<section id="carrito">
+	<section id="carrito" class="oculto">
 		<h3>Carrito</h3>
 		<table>
 			<thead>
@@ -177,9 +177,7 @@
 					<th>Borrar</th>
 				</tr>
 			</thead>
-			<tbody class="objetos-carrito">
-				<!-- Se rellena con JS -->
-			</tbody>
+			<tbody id="objetos-carrito"></tbody>
 			<tfoot>
 				<tr>
 					<th>Total: </th>
@@ -187,11 +185,7 @@
 				</tr>
 			</tfoot>
 		</table>
-		<!-- <div>
-			<span>Total: </span>
-			<span class="precio-total">0,00 €</span>
-		</div> -->
-			<button class="comprar boton-primario">Comprar</button>
+		<button class="comprar boton-primario">Comprar</button>
 	</section>
 </main>
 
