--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/galeria.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/carrito.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8606342840428640"
+     crossorigin="anonymous"></script>
   <script src="js/carrito.js"></script>
   <title>PcAczezorios</title>
 </head>
