Agregado el script de google analytics

--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,15 @@
   <link rel="stylesheet" href="css/navBar-login.css">
   <link rel="stylesheet" href="css/historia.css">
   <link rel="stylesheet" href="css/contacto.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0BTQQE7J80');
+</script>
 </head>
 
 <body>
