--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8606342840428640"
      crossorigin="anonymous"></script>
   <script src="js/carrito.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0BTQQE7J80');
+</script>
   <title>PcAczezorios</title>
 </head>
 
